<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:toolbar="http://schemas.android.com/apk/res-auto"
    style="@style/MatchMatch"
    android:orientation="vertical"
    tools:context=".view.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tool_bar_main"
        style="@style/MatchWrap"
        android:background="@color/colorPrimary"
        toolbar:title="@string/app_name"
        toolbar:titleTextColor="@color/colorWhite"
        toolbar:theme="@style/ToolbarTheme"
        toolbar:popupTheme="@style/OverflowMenu" />
    <android.support.v4.view.ViewPager
        android:id="@+id/app_mian_viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </android.support.v4.view.ViewPager>

    <RadioGroup
        android:id="@+id/main_radiogroup"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_main_radiogroup_height"
        android:background="@color/colorWhite"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/main_radiobutton_weixing"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/activity_main_radiobutton_text_color"
            android:textSize="@dimen/activity_main_radiobutton_text_size"
            android:text="@string/main_radiobutton_weixing"
            android:drawableTop="@drawable/radiobutton_main_weixing"
            android:gravity="center"
            android:checked="true"
            android:button="@null"
            android:background="@null"/>

        <RadioButton
            android:id="@+id/main_radiobutton_contacts"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/activity_main_radiobutton_text_color"
            android:textSize="@dimen/activity_main_radiobutton_text_size"
            android:text="@string/main_radiobutton_contects"
            android:drawableTop="@drawable/radiobutton_main_contacts"
            android:gravity="center"
            android:button="@null"
            android:background="@null"/>

        <RadioButton
            android:id="@+id/main_radiobutton_find"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/activity_main_radiobutton_text_color"
            android:textSize="@dimen/activity_main_radiobutton_text_size"
            android:text="@string/main_radiobutton_find"
            android:drawableTop="@drawable/radiobutton_main_find"
            android:gravity="center"
            android:button="@null"
            android:background="@null"/>
        <RadioButton
            android:id="@+id/main_radiobutton_my"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/activity_main_radiobutton_text_color"
            android:textSize="@dimen/activity_main_radiobutton_text_size"
            android:text="@string/main_radiobutton_my"
            android:drawableTop="@drawable/radiobutton_main_my"
            android:gravity="center"
            android:button="@null"
            android:background="@null"/>
    </RadioGroup>

</LinearLayout>
